# cohort_parallel

./: README.md  setup.cfg  setup.py
cohort_parallel/: __init__.py.in  ex_run.py  simulator.py  task.py  task_manager.py  worker.py
cohort_parallel/tests/: test_task.py  test_task_manager.py
cylc-cohort/: analyse.py  flow.cylc
cylc/cohort-scaling/: analyse.py
cylc/cohort151/: analyse.py  flow.cylc
slurm/: simulator.sh
