[tool:pytest]
testpaths =
    cohort_parallel/
addopts =
    -ra
    -v


[metadata]
name = cohort_parallel
version = file: version.txt
author = Alexander Pletzer
author_email = alexander.pletzer@nesi.org.nz
url = https://github.com/pletzer/cohort_parallel
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
icense = MIT
license_file = LICENSE.txt
description = A toy problem showing how to parallelise cohorts
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    code = https://github.com/pletzer/cohort_parallel
keywords =
    parallel 

[options]
include_package_data = True
install_requires =
    mpi4py
package_dir =
    cohort_parallel=cohort_parallel
packages = find:
python_requires = >3.6
setup_requires =
    setuptools >= 40.8.0
    wheel
tests_require =
    pytest
zip_safe = False
